src/scss/components/_location.scss
.location {
  list-style: none;
  padding: 0;

  li {
    display: block;
    padding: 15px;
    position: relative;

    &:last-child {
      border: 0;
    }
  }

  form {
    position: relative;
  }

  label {
    float: right;
    visibility: hidden;
  }

  input {
    background: transparent;
    border: 0;
    border-bottom: 1px solid;
    border-color: colors(borders, light);
    font-size: $font-size-large;
    text-align: center;
    transition: border-color .5s;
    width: 100%;

    &:focus {
      border-color: colors(borders, focus);
      outline: none;
      transition: border-color .25s;
    }

    &.ng-valid ~ button {
      color: colors(text, hover);
      transition: color .25s;
    }
  }

  button {
    background: transparent;
    border: 0;
    color: colors(text, base);
    position: absolute;
    right: 0;
    transition: color .5s;
  }

  a {
    color: colors(text, base);
    display: block;
    position: relative;
    transition: color .5s;

    &:hover,
    &:focus {
      color: colors(text, hover);
      text-decoration: none;
      transition: color .25s;
    }
  }
}



@media screen and (min-width: $screen-sm) {
  .location {
    list-style: none;

    li {
      display: inline-block;
      padding: 0 15px;
    }

    label {
      float: left;
    }

    input {
      font-size: $font-size-base;
      text-align: left;
      width: 10em;
    }

    a {
      display: inline;
    }
  }
}

